# smart-api-integrations

./: .gitignore  MANIFEST.in  PUBLISH_SUMMARY.md  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  python-publish.yml
docs/: README.md  adding_new_provider.md  adding_new_webhook.md
examples/: test_install.py
examples/flask_integration/: app.py
scripts/: release.py
src/: __init__.py
src/cli/: README.md  main.py
src/cli/commands/: __init__.py
src/clients/: github.py  universal.py
src/core/: client.py  loader.py  schema.py  webhook_registry.py
src/frameworks/: fastapi.py  flask.py
src/management/commands/: add_endpoints.py  add_provider.py  generate_type_stubs.py  smart_api_test.py
src/smart_api_integrations/cli/commands/: test_webhook.py
src/smart_api_integrations/frameworks/: README.md
src/smart_api_integrations/management/: __init__.py
src/smart_api_integrations/management/commands/: __init__.py  smart_api_test.py  test_webhook.py
src/webhooks/: README.md  __init__.py  decorators.py  handlers.py
